# solana-demo-programs

.github/workflows/: test-anchor.yml  test-web.yml
anchor/: Anchor.toml  jest.config.ts  package.json  tsconfig.json
anchor/programs/even-odd-game/: Cargo.toml
anchor/programs/even-odd-game/src/: constants.rs  errors.rs  events.rs  lib.rs
anchor/programs/even-odd-game/src/instructions/: claim_reward.rs  create_game.rs  initialize.rs  join_game.rs  mod.rs  start_game.rs
anchor/programs/even-odd-game/src/states/: game_account.rs  game_counter_account.rs  mod.rs  player_account.rs  vault_account.rs
anchor/programs/presale/: Cargo.toml
anchor/programs/presale/src/: lib.rs
anchor/programs/presale/src/errors/: errors.rs
anchor/programs/presale/src/instructions/: buy_token.rs  claim_token.rs  create_presale.rs  deposit_token.rs  mod.rs  start_presale.rs  (+3 more)
anchor/programs/staking/: Cargo.toml
anchor/programs/staking/src/: lib.rs
anchor/programs/token/src/: lib.rs
anchor/scripts/: create.token.ts  mint.token.ts  staking.initialize.ts
anchor/tests/: staking.spec.ts
anchor/tests/bankrun/: helpers.ts  index.ts  staking.ts  token-exports.ts
app/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
app/src/: index.css
app/src/app/: app-routes.tsx
app/src/components/account/: account-data-access.tsx
app/src/components/staking/: reward-panel.tsx  stake-panel.tsx  staking-data-access.tsx  staking-feature.tsx  staking-ui.tsx
app/src/components/ui/: input-number.tsx  range.tsx  ui-layout.tsx
app/src/utils/: index.ts
(+22 files in other folders)
