[package]
name = "even-odd-game"
version = "0.1.0"
description = "Even Odd Game with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "even_odd_game"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = "0.30.1"
switchboard-on-demand = "0.1.15"
